# azure-ml-lora-finetune-slm

./: .env.template  README.md  pyproject.toml  setup.py
config/: compute_config.yaml  compute_config_cpu.yaml  training_config.yaml  training_config_cpu.yaml
data/: train.jsonl  validation.jsonl
environment/: conda.yaml  requirements.txt
jobs/: submit_eval_job.py  submit_training_job.py  submit_training_job_cpu.py  upload_data_to_blob.py
notebooks/: cpu_training_guide.ipynb
scripts/: generate_requirements.ps1  generate_requirements_uv.ps1  generate_requirements_uv.sh
src/: compare_models.py  evaluate.py  train.py  train_cpu.py  utils.py
